--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,11 @@
 <!doctype html >
-<html data-theme="emerald" lang="en" >
+<html data-theme="cupcake" lang="en" >
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/index.css">
-    <title>Vite + React</title>
+    <title>E Commerce</title>
   </head>
   <body>
     <div id="root"></div>
