--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!doctype html >
-<html data-theme="cupcake" lang="en" >
+<html data-theme="wireframe" lang="en" >
   <head>
     <meta charset="UTF-8" />
     
